static/css/style.css
/* ... */
body {
	font-family: 'Fira Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
	margin-top: 20px;
	margin-bottom: 10px;
	max-width: 820px;
}
p {
	margin-top: 1.2em;
	margin-bottom: 1.2em;
}
.pitch b {
	font-weight: 400;
}
li {
	margin-bottom: .5em;
}
h1 {
	font-size: 2em;
	margin-top: 1.2em;
	margin-bottom: 0.5em;
}

ul {
	padding-left: 30px;
}
ul.menu {
	font-size: 1em;
	margin: 0;
	padding: 0;
	text-align: center;
}
ul.menu li {
	list-style-type: none;
	margin-top: 0em;
	margin-bottom: 0em;
}
ul.menu h2 {
	font-size: 20px;
	font-weight: 500;
	margin: 1em;
	display: inline;
	line-height: 1.5em;
}
ul.menu li>ul {
	margin-top: .5em;
	padding-left: 0em;
	line-height: 1.5em;
}

.menu img {
	margin: 0 auto 20px auto;
}
@media (min-width: 992px) {
	ul.menu li.menu {
		margin-top: 3em;
	}
	ul.menu {
		text-align: left;
	}
	.menu img {
		margin: 0;
	}
}

h2 {
	font-weight: 500;
	font-size: 18.5px; /* gridfit */
}
h3 {
	font-weight: 500;
}

.side-header h2 {
	font-weight: 500;
	font-size: 18.5px;
	line-height: 24px;
	margin-top: 7px;
}

.side-header h3 {
	font-size: 1em;
	margin-top: 0px;
}

.side-header p {
	color:  #777;
}

.table-features {
	width: 100%;
	margin-bottom: 18px;
	border: 1px solid #ccc;
	border-radius: 3px;
	border-collapse: inherit;
}
.table-features td {
	padding: 6px 12px;
	border: none;
}

div.install {
	margin-top: 2.5em;
	margin-bottom: 1.5em;
}

.table-installers {
	border-spacing: 4px;
	border: 0px;
	empty-cells: hide;
}

.table-installers td {
	padding: 0px;
}

.table-installers td.inst-type {
	border: 0px;
	color: black;
	text-align: left;
	width: 13em;
}

.table-installers div.inst-button {
	border: 1px solid #ccc;
	text-align: center;
	border-radius: 3px;
	padding: 0.3em;
}

.table-installers div.inst-button:hover {
	border-color: #428BCA;
	color: white;
	background-color: #428BCA;
}

.table-installers a {
	text-decoration: none;
}

.install-row {
	margin-bottom: 0em;
}

p.pitch {
	font-size: 25px;
	font-weight: 300;
	text-align: center;
}
@media (min-width: 992px) {
	p.pitch {
		font-size: 25px;
		margin-top: 1.5em;
		margin-bottom: 1em;
		margin-right: 1em;
		text-align: left;
	}
}

.install-box {
	color: #777;
	text-align: right;
	font-size: 130%;
	margin-top: 0.8em;
}

.version-rec-box-inner {
	display: block;
	font-size: 12px;
	text-align: center;
}

hr {
	margin-top: 2em;
	margin-bottom: 3em;
	border-top: 2px solid #dedede;
}

.asterisk {
	margin-left: 0px;
	color: #428BCA;
}

.footnote {
	color: #777;
	text-align: right;
	font-size: 12px;
	padding: 0 15px;
}

.laundry-list {
	font-size: 16px;
	list-style-type: square;
}

.install-box a.btn {
	display: block;
	margin:1em auto;
	max-width: 250px;
}

ul.laundry-list {
	column-count: 2;
	-moz-column-count: 2;
	-webkit-column-count: 2;
	margin-bottom: 20px;
}

.resp-block {
	display: none;
}

@media (min-width: 992px) {
	.install-box a.btn {
		font-size: 18px;
		padding: 10px 15px;
	}
	ul.laundry-list {
	  column-count: auto;
	  -moz-column-count: auto;
	  -webkit-column-count: auto;
	}
	img.ribbon {
		display: inline !important;
		position: absolute;
		top: 0;
		right: 0;
		border: 0;
    width: 149px;
    height: 149px;
	}
	ul.menu .col-xs-12 {
		padding-left: 0;
	}
	.resp-block {
		display: block;
	}
}

#editor {
  padding: none;
  margin: none;
  width: 100%;
  min-height: 340px;
  font-size: 13px;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  white-space: pre-wrap;
}

#active-code {
  position: relative;
  display: none;
  padding: 10px;
  border-radius: 4px;
  background-color: #FDFDFD;
  border: 1px solid #CCC;
}

#run-code {
  position: absolute;
  z-index: 10;
  float: right;
  right: 8px;
  top: 8px;
  outline: none;
}

 [class^="icon-"]:before, [class*=" icon-"]:before {
  cursor: pointer;
  cursor: hand;               /* cursor: hand ensures IE 5.5 */
  font-family: "fontello";
  font-style: normal;
  font-weight: normal;
  speak: none;

  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */

  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;

  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;

  position: relative;
  float: right;
  font-size: 120%;

}

.icon-link-ext:before { content: '\e800'; } /* '' */

#result {
  background-color: #E2EEF6;
  margin-top: 10px;
  padding: 10px;
  display: none;
  border-radius: 4px;
}

.ace-error-text, .ace-error-line, .ace-warning-text, .ace-warning-line {
  position: absolute;
}

.ace-error-text {
  background-color: #e9abab;
}

.ace-error-line {
  background-color: #F6E2E2;
}

.ace-warning-text {
  background-color: #FFEF00;
}

.ace-warning-line {
  background-color: #FFFBCB;
}

.ace-chrome .ace_comment {
	color: #565656;
}

.ace-chrome .ace-keyword {
	color: #8959A8;
}

.ace-chrome .ace_entity.ace_name.ace_function {
	color: #4271AE;
}

.ace-chrome .ace_constant.ace_numeric {
	color: #718C00;
}

.ace-chrome .ace_keyword.ace_operator {
	color: black;
}

.ace-chrome .ace_string {
	color: #3E999F;
}

#active-code, #editor {
	background-color: #FAFAFA;
}

.more-examples {
	text-align: right;
	margin: 5px 10px 0 0;
}

.content {
    border-top: 2px solid #dedede;
    margin-top: 2em;
    margin-bottom: 8em;
    padding-top: 2em;
}

.content p,
.content ul,
.content ol,
.content blockquote,
.content pre {
    margin: 0 0 1rem;
}

.content h1 {
    font-size: 2.5em;
    line-height: 1.5em;
    margin-top: 0;
    margin-bottom: 1rem;
    font-weight: 400;
    position: relative;
}

.content h2 {
    font-size: 2em;
    line-height: 1.5em;
    margin: 3rem 0 1rem;
    font-weight: 400;
    border-top: 2px solid #dedede;
    padding-top: 1rem;
}

.content h3 {
    font-size: 1em;
    line-height: 1.5em;
    font-weight: 500;
    margin: 2rem 0 .5rem;
}

.post-title {
    color: inherit;
    text-decoration: underline;
}
/* ... */

